# websockets-demo

./: .gitignore  pyproject.toml
websockets_demo/: __init__.py  main.py
websockets_demo/db/: __init__.py
websockets_demo/db/models/: __init__.py  users.py
websockets_demo/pages/: __init__.py
websockets_demo/pages/api/: __init__.py  login.py  signup.py
websockets_demo/pages/components/: __init__.py  login.py  signup.py
